christmas-shop/style.css
/* ... */
*, *::before, *::after {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    user-select: none;
}

html {
    scroll-behavior: smooth;
}

/* Typography */

h1 {
    font: 600 32px/150% 'Montserrat', sans-serif;
    letter-spacing: 0.18em;
    text-transform: uppercase;
}

h2 {
    font: 600 24px/152% 'Montserrat', sans-serif;
    letter-spacing: 0.16em;
    text-transform: uppercase;
}

h3 {
    font: 600 16px/152% 'Montserrat', sans-serif;
    letter-spacing: 0.08em;
    text-transform: uppercase;
}

h4 {
    font: 600 12px/130% 'Montserrat', sans-serif;
    letter-spacing: 0.05em;
    text-transform: uppercase;
}

.paragraph {
    font: 400 16px/148% 'Montserrat', sans-serif;
    color: var(--dark);
}

.action-large {
    font: 600 24px/152% 'Montserrat', sans-serif;
    letter-spacing: 0.16em;
    text-transform: uppercase;
}

.action-small {
    font: 600 12px/130% 'Montserrat', sans-serif;
    letter-spacing: 0.05em;
    text-transform: uppercase;
}

.caption {
    font: 400 24px/100% 'Allura', cursive;
    letter-spacing: 0.05em;
}

.slider-text {
    font: 600 80px 'Montserrat', sans-serif;
    text-transform: uppercase;
}

/* BUTTONS */

.button {
    background-color: var(--dark);
    color: var(--static-white);
    border-radius: 20px;
    padding: 20px 32px;
    display: inline-block;
    text-align: center;
    cursor: pointer;
}

.button * {
    display: block;
    color: inherit;
}

.button-small {
    width: 56px;
    height: 56px;
    border-radius: 20px;
    border: var(--static-white) 1px solid;
    text-align: center;
    line-height: 56px;
    cursor: pointer;
}

.button-small i {
    /* vertical-align: middle;  */
    font-size: 15px;
    color: inherit;
}

.button-small[data-disabled="true"] {
    cursor: not-allowed;
    pointer-events: none; 
    color: var(--static-white40);
    border-color: var(--static-white40);
}

/* .button-small:active {
    background-color: var(--static-white20);
} */

/* HEADER */

header {
    background-color: var(--static-white);
    
    height: 64px;
    padding: 0px 8px;
    position: fixed;
    width: 100%;
    z-index: 10;
    
    margin: 0 auto;
}

.logo {
    display: flex;
    align-items: center;
    padding: 8px 20px;
    white-space: nowrap;
    border-radius: 12px;
    cursor: pointer;
    /* margin: 0 82px; */
}

#header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;

    max-width: 1276px;
    height: 100%;
    margin: 0 auto;
}

.logo img {
    width: 24px;
    height: 24px;
}

.logo span {
    margin-left: 8px;
}

.menu {
    padding: 12px 20px;
    display: flex;
    gap: 8px;
    padding: 0px;
    margin: 0px;
    align-items: center;
    list-style: none;
}

.menu li {
    padding: 12px 20px;
    border-radius: 12px;
    cursor: pointer;
}

.menu a {
    text-decoration: none;
    color: inherit;
    display: block;
}

.menu li[data-state="disabled"] {
    pointer-events: none;
    /* cursor: not-allowed; */
}

/* HAMBURGER MENU */

.hamburger {
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    gap: 8px;
    width: 40px;
    height: 40px;
}

.line {
    display: block;
    height: 2px;
    width: 20px;
    background-color: var(--dark);
    border-radius: 15px;
    transition: all 0.3s ease-in-out;
}

#menu-toggle {
    display: none;
}



/* Body */

body {
    background-color: var(--static-white);
}

/* main {
    width: 100%;
} */

a {
    text-decoration: none;
    color: inherit;
    display: block;
}

.main-container {
    max-width: min(1440px, 100vw);
    margin: 0 auto;
    border-radius: 20px;

    display: grid; 
    grid-template-columns: 1fr; 
    grid-template-rows: 524px 648px 488px 554px 668px; 
    gap: 0px 0px; 
    grid-template-areas: 
    "hero-section"
    "about-section"
    "slider-section"
    "best-gifts-section"
    "cta-section"; 
    justify-content: center; 
    align-content: center; 
    justify-items: center; 
    align-items: center; 
    background: url(img/bg-snow.png) repeat center/contain, var(--primary);

    position: relative;
    /* top: 64px; */

    overflow-x: hidden;
}

.container {
    /* margin: 0 auto; */
    max-width: min(1440px, 100%);
}

.container > .content {
    max-width: min(1276px, 100%);
    margin: 0 auto;

    /* DELETE */
    /* width: 1000px; */
}



/* HERO */

#hero-section { 
    grid-area: hero-section;
    background: url(img/bg-ball.png) no-repeat center/cover, url(img/bg-snow.png) no-repeat center/cover;
    width: 100vw;
    height: 100%;
    padding: 60px 8px;
    /* text-wrap: pretty; */
}

#hero-section .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 12px;
    padding: 60px 0px;
    max-width: 426px;
    margin: 0 auto;
}

#hero-section .text {
    color: var(--static-white);
    background-color: rgba(0, 0, 0, 0);
}

#hero-section h1 {
    text-wrap: nowrap stable;
}

/* ABOUT */

#about-section {
    grid-area: about-section;
    padding: 60px 8px;
    height: 100%;
    width: 100%;
}

#about-section .content {
    background-color: var(--static-white);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between; 
    align-items: stretch;
    border-radius: 20px;
}

#about-section .text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: flex-start;
    flex: 1 1 50%;
    max-height: 528px;
    /* width: 100%; */
    padding: 60px 60px;
}

#about-section .text #about-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
    max-width: 426px;
    /* width: 100%; */
    /* text-wrap: wrap pretty; */
}

#about-section .text .caption {
    color: var(--primary);
}
/* ... */

